# ohd

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  PACKAGING.md  README.md  claude-architecture-dump.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  ux-design.md
care/cli/: PACKAGING.md  README.md  STATUS.md  buf.gen.yaml  pyproject.toml
care/cli/scripts/: gen_proto.py
care/cli/src/ohd_care/: __init__.py  canonical_query_hash.py  cli.py  client_factory.py  config.py  credentials.py  grant_vault.py  kms.py  ohdc_client.py  oidc.py  operator_audit.py  util.py
care/cli/tests/: conftest.py  test_canonical_query_hash.py  test_cli.py  test_integration.py  test_oidc_kms.py  test_operator_audit.py  test_smoke.py
care/mcp/: README.md  STATUS.md  pyproject.toml
care/mcp/src/ohd_care_mcp/: __init__.py  __main__.py  canonical_query_hash.py  config.py  grant_vault.py  ohdc_client.py  operator_audit.py  server.py  tools.py
care/mcp/tests/: test_canonical_query_hash.py  test_tools.py
connect/cli/: Cargo.toml  README.md  build.rs
connect/cli/src/: client.rs  credentials.rs  events.rs  kms.rs  main.rs  timeparse.rs
connect/cli/tests/: h3_client_smoke.rs
connect/mcp/: README.md  STATUS.md  pyproject.toml
connect/mcp-rs/: Cargo.toml
connect/mcp-rs/deploy/: Dockerfile
connect/mcp-rs/src/: dispatch.rs  docs.html  http.rs  jsonrpc.rs  lib.rs  main.rs  stdio.rs
connect/mcp/src/ohd_connect_mcp/: __init__.py  __main__.py  _connect_transport.py  config.py  ohdc_client.py  openfoodfacts.py  server.py  tools.py
connect/mcp/tests/: test_openfoodfacts.py  test_tools.py
cord/crates/cord-agent/: Cargo.toml
cord/crates/cord-agent/src/: agent.rs  anthropic.rs  lib.rs  mcp.rs  provider.rs  types.rs
cord/crates/cord-relay-e2e/: Cargo.toml
cord/crates/cord-relay-e2e/src/: lib.rs
cord/crates/cord-relay-e2e/tests/: relay_data_plane.rs
cord/crates/cord-server/: Cargo.toml
cord/crates/cord-server/migrations/: 001_initial.sql
cord/crates/cord-server/src/: config.rs  crypto.rs  db.rs  errors.rs  lib.rs  main.rs  oidc.rs  server.rs  session.rs  share.rs  util.rs
emergency/cli/: Cargo.toml  README.md  build.rs
emergency/cli/src/: audit.rs  case_export.rs  cert.rs  client.rs  config.rs  kms.rs  main.rs  roster.rs
emergency/cli/tests/: case_export_smoke.rs
idp/crates/ohd-idp/: Cargo.toml
idp/crates/ohd-idp/src/: codes.rs  config.rs  discovery.rs  errors.rs  html.rs  jwks.rs  keys.rs  keystore.rs  lib.rs  main.rs  registry.rs  server.rs  store.rs  token.rs
idp/crates/ohd-idp/tests/: config.rs  endpoints.rs  oidc_flow.rs  phase3.rs
relay/: .gitignore  Cargo.toml  README.md  SPEC.md  STATUS.md
relay/deploy/: Caddyfile  Dockerfile  README.md  docker-compose.yml  relay.example.toml
relay/examples/: quic_tunnel_client.rs
relay/spec/: README.md  oidc-gating-addendum.md  relay-protocol.md
relay/src/: config.rs  emergency_endpoints.rs  frame.rs  http3.rs  lib.rs  main.rs  metering.rs  pairing.rs  quic_tunnel.rs  server.rs  session.rs  state.rs
relay/src/auth/: mod.rs  oidc.rs
relay/src/auth_mode/: cert_chain.rs  fulcio.rs  mod.rs  refresh.rs  rekor.rs  signer.rs
relay/src/push/: apns.rs  fcm.rs  mod.rs
relay/tests/: end_to_end.rs  end_to_end_emergency.rs  end_to_end_emergency_endpoints.rs  end_to_end_http3.rs  end_to_end_oidc_gating.rs  end_to_end_quic_tunnel.rs  inner_tls_through_tunnel.rs
saas/: Cargo.toml  SPEC.md
saas/deploy/: Dockerfile
saas/migrations/: 001_initial.sql  002_email_credentials.sql
saas/src/: auth.rs  config.rs  db.rs  docs.html  docs.rs  errors.rs  lib.rs  main.rs  plans.rs  routes.rs  server.rs
storage/: .gitignore  Cargo.toml  README.md  SPEC.md  STATUS.md  buf.gen.yaml  buf.yaml  rust-toolchain.toml
storage/crates/ohd-cli-auth/: Cargo.toml
storage/crates/ohd-cli-auth/src/: lib.rs  oidc.rs  ulid.rs
storage/crates/ohd-cli-kms/: Cargo.toml
storage/crates/ohd-cli-kms/src/: lib.rs
storage/crates/ohd-h3-helpers/: Cargo.toml
storage/crates/ohd-h3-helpers/src/: lib.rs  tls_pin.rs
storage/crates/ohd-mcp-core/: Cargo.toml
storage/crates/ohd-mcp-core/src/: event_json.rs  grant_json.rs  lib.rs  put.rs  scope.rs  wire.rs
storage/crates/ohd-mcp-core/tests/: dispatch.rs  scoped_dispatch.rs
storage/crates/ohd-relay-client/: Cargo.toml
storage/crates/ohd-relay-client/src/: frame.rs  lib.rs  registration.rs  responder.rs  service.rs  tls.rs  tunnel.rs
storage/crates/ohd-relay-client/tests/: registration_flow.rs  tunnel_frame.rs
storage/crates/ohd-storage-bindings/: Cargo.toml  README.md  pyproject.toml  regen-kotlin.sh
storage/crates/ohd-storage-bindings/src/: android_panic.rs  lib.rs  pyo3_module.rs  remote.rs  remote_access.rs  uniffi-bindgen.rs
storage/crates/ohd-storage-bindings/tests/: test_pyo3.py
storage/crates/ohd-storage-client/: Cargo.toml  build.rs
storage/crates/ohd-storage-client/examples/: probe.rs
storage/crates/ohd-storage-client/src/: convert.rs  lib.rs  types.rs
storage/crates/ohd-storage-conformance/: Cargo.toml  run_corpus.py
storage/crates/ohd-storage-conformance/corpus/: manifest.json
storage/crates/ohd-storage-core/: Cargo.toml
storage/crates/ohd-storage-server/: Cargo.toml  build.rs
storage/deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
storage/migrations/: .gitkeep  001_initial_schema.sql  002_std_registry.sql  003_case_markers.sql  004_peer_attachment_sync.sql  005_pending_queries.sql  006_delegate_grants.sql  007_multi_identity.sql  008_channel_encryption.sql  009_auth_sessions_etc.sql  010_encrypted_attachments.sql  011_bip39_recovery.sql  012_grant_recovery_pubkey.sql  012_oauth_state.sql  013_source_signing.sql  014_class_key_rotation_fk.sql  015_aad_v2.sql  016_drop_v1.sql  017_emergency_config.sql  018_connect_android_types.sql  019_parent_event_link.sql  020_clinical_types.sql  021_treatment_plan.sql
storage/spec/: README.md  conformance.md  data-model.md  encryption.md  ohdc-protocol.md  privacy-access.md  storage-format.md  sync-protocol.md
storage/tools/: regen_migrations.py
storage/vendor-openssl-src/src/: lib.rs
(+645 files in other folders)
