[project]
name = "ohd-care"
version = "0.1.0"
description = "OHD Care CLI — terminal interface for the OHD reference clinical app."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "OHD Project" },
]
keywords = ["ohd", "health", "ehr", "clinical", "ohdc"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click>=8.1.7",
    "httpx[http2]>=0.27",
    "keyring>=24",
    "ohd-shared",
    "protobuf>=5.27,<7",
    "pydantic>=2.7",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[tool.uv.sources]
ohd-shared = { path = "../../packages/python/ohd-shared" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "grpcio-tools>=1.60",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "grpcio-tools>=1.60",
]

[project.scripts]
ohd-care = "ohd_care.cli:main"

[project.urls]
Homepage = "https://github.com/ohd-foundation/ohd"
Repository = "https://github.com/ohd-foundation/ohd"
Documentation = "https://github.com/ohd-foundation/ohd/tree/main/care"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ohd_care"]

[tool.hatch.build.targets.wheel.force-include]
"src/ohd_care/ohdc_proto" = "ohd_care/ohdc_proto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
markers = [
    "integration: integration tests that require a built ohd-storage-server binary",
]
asyncio_mode = "auto"
