[project]
name = "ohd-care-mcp"
version = "0.1.0"
description = "OHD Care MCP server — multi-patient clinical OHDC surface as MCP tools (FastMCP)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "OHD Project" },
]
keywords = ["ohd", "health", "mcp", "fastmcp", "ohdc", "clinical", "ehr", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastmcp>=2.11,<4",
    "pydantic>=2.7",
    "anyio>=4.4",
    "httpx>=0.27",
    "ohd-shared[oauth]",
    "protobuf>=5.0",
]

[tool.uv.sources]
ohd-shared = { path = "../../packages/python/ohd-shared" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.80.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
ohd-care-mcp = "ohd_care_mcp.server:main"

[project.urls]
Homepage = "https://github.com/ohd-foundation/ohd"
Repository = "https://github.com/ohd-foundation/ohd"
Documentation = "https://github.com/ohd-foundation/ohd/tree/main/care/mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ohd_care_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that spin up a real ohd-storage-server (slow; need the binary built)",
]
