[package]
name = "ohd-mcp-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "OHD MCP server — JSON-RPC 2.0 surface over the ohd-mcp-core tool catalog. Speaks stdio (local Claude Code / Cursor / Codex) and HTTP (deployed at mcp.ohd.dev). Replaces the Python connect/mcp/."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ohd-foundation/ohd"
publish = false

[[bin]]
name = "ohd-mcp-rs"
path = "src/main.rs"

[lib]
name = "ohd_mcp_rs"
path = "src/lib.rs"

[dependencies]
ohd-mcp-core = { path = "../../storage/crates/ohd-mcp-core" }
ohd-storage-core = { path = "../../storage/crates/ohd-storage-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std", "io-util"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
