[package]
name = "ohd-mcp-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "DEPRECATED — OHD MCP standalone server. The SaaS MCP surface lives on ohd-storage-server (POST /mcp) since the wire layer was lifted into ohd-mcp-core::wire; mcp.ohd.dev is a Caddy alias to that route. Source kept for reference (stdio mode, docs.html) but no longer built or deployed."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ohd-foundation/ohd"
publish = false

[[bin]]
name = "ohd-mcp-rs"
path = "src/main.rs"

[lib]
name = "ohd_mcp_rs"
path = "src/lib.rs"

[dependencies]
ohd-mcp-core = { path = "../../storage/crates/ohd-mcp-core" }
ohd-storage-core = { path = "../../storage/crates/ohd-storage-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std", "io-util"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
