[package]
name = "ohd-emergency"
version = "0.0.1"
edition = "2021"
# Bumped 1.83 → 1.88 to match connect/cli's MSRV: the connectrpc 0.4 +
# buffa 0.5 generated client emits edition-2024 syntax. Tracks
# ../../connect/cli/Cargo.toml.
rust-version = "1.88"
description = "OHD Emergency operator CLI — cert lifecycle, roster, audit, case-export."
license = "Apache-2.0 OR MIT"
publish = false
build = "build.rs"

[[bin]]
name = "ohd-emergency"
path = "src/main.rs"

[dependencies]
# CLI parser
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }

# Connect-RPC stack — pinned to the same versions as ../../storage/ and
# ../../connect/cli/ so the codegen-emitted OhdcServiceClient is wire-
# compatible with the running storage server. See ../../storage/STATUS.md
# "Wire-format swap" for rationale.
connectrpc = { version = "0.4", features = ["client", "streaming"] }
buffa = { version = "0.5", features = ["json"] }
buffa-types = { version = "0.5", features = ["json"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http2"] }
bytes = "1"
futures = "0.3"

# HTTP/3 client transport. Mirrors connect/cli/src/client.rs's
# `H3RawClient` — connectrpc 0.4 ships only an Http2Connection, so a thin
# direct-h3 wrapper is the simplest way to reach a server's QUIC port.
quinn = "0.11"
h3 = "0.0"
h3-quinn = "0.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config + roster files (TOML at ~/.config/ohd-emergency/ + ~/.local/share/ohd-emergency/).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"

# Time parsing for `audit --from` / `--to`, ISO timestamp render in archives.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# x509 cert parsing for `cert info`.
x509-parser = { version = "0.16", default-features = false }

# SHA-256 fingerprint for `cert info`. `sha2` is a tiny pure-Rust hash
# crate; we deliberately don't pipe through `ring` (its hash module is
# crate-private) or rustls' helpers.
sha2 = "0.10"

# OIDC + KMS — shared with connect/cli via two helper crates in the
# storage workspace. `ohd-cli-kms` provides the AES-GCM/Argon2id vault
# (passphrase + OS keyring + None backends, parameterised by the
# per-CLI namespace constants in `src/kms.rs`); `ohd-cli-auth` provides
# the OAuth2 device-flow client and the Crockford-base32 ULID helpers
# used by the audit + case-export commands.
ohd-cli-kms = { path = "../../storage/crates/ohd-cli-kms" }
ohd-cli-auth = { path = "../../storage/crates/ohd-cli-auth" }
url = "2.5.8"
secrecy = "0.10"
# StandardDeviceAuthorizationResponse pattern-matched in main.rs prompt.
oauth2 = "5"

[build-dependencies]
# Codegen the OHDC Rust client from ../../storage/proto/ohdc/v0/ohdc.proto.
# Mirrors connect/cli/build.rs.
connectrpc-build = "0.4"
protoc-bin-vendored = "3"

[dev-dependencies]
# Self-signed cert generator for cert-info unit tests.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# -----------------------------------------------------------------------------
# Distribution packaging — cargo-deb / cargo-generate-rpm.
# Emergency operator CLI — binary only, no daemon. State lives under the
# operator's $XDG_CONFIG_HOME / $XDG_DATA_HOME so no system-level config dir.
#
# Build:
#   cargo deb -p ohd-emergency
#   cargo generate-rpm -p ohd-emergency
# -----------------------------------------------------------------------------

[package.metadata.deb]
name = "ohd-emergency"
maintainer = "OHD Project <maintainers@ohd.example>"
copyright = "2026 OHD Project — Apache-2.0 OR MIT"
license-file = "../../spec/LICENSE-APACHE"
extended-description = """\
OHD Emergency operator CLI — cert lifecycle, roster, audit, case-export.
Used by emergency-services operators to manage authority cert rotation
and review break-glass access logs against patient OHD Storage instances.
This is the operator-side counterpart to the patient-side break-glass UI
in OHD Connect."""
section = "admin"
priority = "optional"
depends = "libc6, ca-certificates"
assets = [
    ["target/release/ohd-emergency", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ohd-emergency/README.md", "644"],
]

[package.metadata.generate-rpm]
name = "ohd-emergency"
license = "Apache-2.0 OR MIT"
summary = "OHD Emergency operator CLI — cert lifecycle, roster, audit, case-export"
assets = [
    { source = "target/release/ohd-emergency", dest = "/usr/bin/ohd-emergency", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/ohd-emergency/README.md", mode = "644", doc = true },
    { source = "../../spec/LICENSE-APACHE", dest = "/usr/share/licenses/ohd-emergency/LICENSE-APACHE", mode = "644", doc = true },
    { source = "../../spec/LICENSE-MIT", dest = "/usr/share/licenses/ohd-emergency/LICENSE-MIT", mode = "644", doc = true },
]
auto-req = "no"

[package.metadata.generate-rpm.requires]
glibc = "*"
ca-certificates = "*"
